Fixes scrollbars within editors

--- a/app/NovaWeb/src/styles/partials/_pagecontent.scss
+++ b/app/NovaWeb/src/styles/partials/_pagecontent.scss
@@ -10,6 +10,11 @@ pagecontent, bp-properties-panel {
   //transition: all .4s ease;
   width: 100%;
 
+  .page-content-wrapper {
+    height: 100%;
+    width: 100%;
+  }
+
   .page-content {
     display: flex;
     flex-flow: column nowrap;
@@ -21,7 +26,7 @@ pagecontent, bp-properties-panel {
     flex-shrink: 0;
     font-size: 0; // to remove unwanted space around elements. Specify font-size for inner elements!
     min-width: $page-body-min-width;
-    padding-top: 15px;
+    margin: 15px 20px 0;
     white-space: nowrap;
 
     &::after {
@@ -34,7 +39,7 @@ pagecontent, bp-properties-panel {
   .page-body-wrapper {
     min-width: $page-body-min-width;
     overflow: hidden !important;
-    padding: 0 20px 10px;
+    margin: 0 20px 10px;
     z-index: 0;
   }
 
@@ -42,6 +47,11 @@ pagecontent, bp-properties-panel {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+  }
+
+  .artifact-state {
+    height: 100%;
+    width: 100%;
   }
 
   //$page-top-toolbar-width: 420px; // this value changes whenever the number of buttons (and their labels) in the toolbar changes
